End of spacegoat review, template of nopol review

--- a/reviews/nopol/main.tex
+++ b/reviews/nopol/main.tex
@@ -14,7 +14,7 @@
 \renewcommand{\labelitemi}{$\bullet$}
 
 
-\title{Article review \\ \emph{Spacegoat: an Adaptive monitoring framework for Component-based systems}}
+\title{Article review \\ \emph{Automatic Repair of Buggy If Conditions and Missing Preconditions with SMT}}
 \author{Alexandre Honorat}
 \date{\today}
 
