--- a/reportMaster2/main.tex
+++ b/reportMaster2/main.tex
@@ -33,9 +33,9 @@
 %% \chapter{Utilisation de StarPU et intégration dans QIRAL}
 
 %% Intro:
-%% -> contexte
-%% -> problématique
-%% -> contribution
+%% -> contexte //nécessité de la programmation parallèle
+%% -> problématique //dur d'écrire du code parallèle (même pour le compilateur)
+%% -> contribution //avoir de l'expressivité, exemple entre QIRAL et SYCL pour exécuter des stencils
 
 %% Chap2:
 %% -> contexte
@@ -50,12 +50,12 @@
 %%    i. e. C++, SYCL
 
 %% Chap5:
-%% -> évaluation, présentation résultat
+%% -> évaluation, méthodologie présentation résultat
 
 %% Conclusion:
-%% -> ce qui a été fait
-%% -> ce qui aurait pu être fait (qqc de crédible)
-%% -> ce qui reste à faire (à court (plutôt technique), moyen et long terme)
+%% -> ce qui a été fait (résumé)
+%% -> ce qui aurait pu être fait (qqc de crédible, choix alternatifs par exemple SYCLONE, SkePU, StarPU)
+%% -> ce qui reste à faire (à court (plutôt technique), moyen et long terme) (aspect ditribué ? pour aute algo que stencils comme map/reduce ?)
 
 \chapter*{Conclusion}
 \addcontentsline{toc}{chapter}{Conclusion}
