First plan for the report

--- a/reportMaster2/0-Garde.tex
+++ b/reportMaster2/0-Garde.tex
@@ -17,7 +17,7 @@
   \vspace{1cm}
   \hrule
   \begin{flushleft}
-    \Huge{\textit{Exemple d'utilisation de l'interface SYCL}}\\
+    \Huge{\textit{Extraction automatisée de parallélisme de tâches, et expression dans le formalisme SYCL}}\\
   \end{flushleft}
   \begin{flushright}
     \huge\textbf{Rapport de stage}\\
