New entries in bib, resize logo

--- a/reportMaster2/main.bib
+++ b/reportMaster2/main.bib
@@ -243,3 +243,125 @@ doi={10.1109/SC.2010.2}
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@inproceedings{Art15,
+  title={Real-time fluid dynamics for games},
+  author={Stam, Jos},
+  booktitle={Proceedings of the game developer conference},
+  volume={18},
+  pages={25},
+  year={2003}
+}
+
+@inproceedings{Art16,
+ author = {Bandishti, Vinayaka and Pananilath, Irshad and Bondhugula, Uday},
+ title = {Tiling Stencil Computations to Maximize Parallelism},
+ booktitle = {Proceedings of the International Conference on High Performance Computing, Networking, Storage and Analysis},
+ series = {SC '12},
+ year = {2012},
+ isbn = {978-1-4673-0804-5},
+ location = {Salt Lake City, Utah},
+ pages = {40:1--40:11},
+ articleno = {40},
+ numpages = {11},
+ url = {http://dl.acm.org/citation.cfm?id=2388996.2389051},
+ acmid = {2389051},
+ publisher = {IEEE Computer Society Press},
+ address = {Los Alamitos, CA, USA},
+ keywords = {compilers, program transformation}
+} 
+
+@inproceedings{Art17,
+ author = {Zhou, Xing and Giacalone, Jean-Pierre and Garzar\'{a}n, Mar\'{\i}a Jes\'{u}s and Kuhn, Robert H. and Ni, Yang and Padua, David},
+ title = {Hierarchical Overlapped Tiling},
+ booktitle = {Proceedings of the Tenth International Symposium on Code Generation and Optimization},
+ series = {CGO '12},
+ year = {2012},
+ isbn = {978-1-4503-1206-6},
+ location = {San Jose, California},
+ pages = {207--218},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2259016.2259044},
+ doi = {10.1145/2259016.2259044},
+ acmid = {2259044},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {compiler optimization, loop tiling and fusion, stencil computation}
+} 
+
+@MISC{Art18,
+    author = {Tang, Yuan and Chowdhury, Rezaul and Luk, Chi-keung and Leiserson, Charles E.},
+    title = {Coding Stencil Computations Using the Pochoir Stencil-Specification Language},
+    year = {2011}
+}
+
+@inproceedings{Art19,
+ author = {Holewinski, Justin and Pouchet, Louis-No\"{e}l and Sadayappan, P.},
+ title = {High-performance Code Generation for Stencil Computations on GPU Architectures},
+ booktitle = {Proceedings of the 26th ACM International Conference on Supercomputing},
+ series = {ICS '12},
+ year = {2012},
+ isbn = {978-1-4503-1316-2},
+ location = {San Servolo Island, Venice, Italy},
+ pages = {311--320},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2304576.2304619},
+ doi = {10.1145/2304576.2304619},
+ acmid = {2304619},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {gpu, opencl, overlapped tiling, stencil}
+} 
+
+@inproceedings{Art20,
+    author = {Veldhuizen, Todd L. and Gannon, Dennis},
+    title = {Active Libraries: Rethinking the roles of compilers and libraries},
+    booktitle = {In Proceedings of the SIAM Workshop on Object Oriented Methods for Inter-operable Scientific and Engineering Computing OO’98},
+    year = {1998},
+    publisher = {SIAM Press}
+}
+
+@article{Art21,
+    author = {Todd, Veldhuizen},
+    title = {Expression Templates},
+    journal = {C++ Report},
+    year = {1995},
+    volume = {7},
+    pages = {26--31}
+}
+
+@incollection{Art22,
+	year={2004},
+	isbn={978-3-540-22119-7},
+	booktitle={Domain-Specific Program Generation},
+	volume={3016},
+	series={Lecture Notes in Computer Science},
+	editor={Lengauer, Christian and Batory, Don and Consel, Charles and Odersky, Martin},
+	doi={10.1007/978-3-540-25935-0_18},
+	title={Guaranteed Optimization for Domain-Specific Programming},
+	url={http://dx.doi.org/10.1007/978-3-540-25935-0_18},
+	publisher={Springer Berlin Heidelberg},
+	author={Veldhuizen, Todd L.},
+	pages={307-324},
+	language={English}
+}
+
+@phdthesis{Ths2,
+	author={Amini, Mehdi},
+	title={Source-to-Source Automatic Program Transformations for GPU-like Hardware Accelerators},
+	school={Mines ParisTech},
+	year={2012}
+}
+
+@phdthesis{Ths3,
+	author={Thibault, Samuel},
+	title={Ordonnancement de processus légers sur architectures multiprocesseurs hiérarchiques : BubbleSched, une approche exploitant la structure du parallélisme des applications},
+	school={Université Bordeaux 1},
+	year={2007}
+}
+
+@phdthesis{Ths4,
+	author={Broquedis, François},
+	title={De l’exécution structurée d’applications scientifiques OpenMP sur architectures hiérarchiques},
+	school={Université Bordeaux 1},
+	year={2010}
+}
