--- a/reportMaster2/0-Garde.tex
+++ b/reportMaster2/0-Garde.tex
@@ -4,17 +4,17 @@
     \begin{figure}[!htbp]
       \begin{center}
         \begin{minipage}{0.4\linewidth}
-          \center{\includegraphics[width=1\textwidth]{enseirb_inp.png}}
+          \center{\includegraphics[scale=0.7]{enseirb_inp.png}}
         \end{minipage}
         \hfill
         \begin{minipage}{0.4\linewidth}
-          \center{\includegraphics[width=1\textwidth]{UniversiteBordeaux_CMJN-01.jpg}}
+          \center{\includegraphics[scale=0.05]{UniversiteBordeaux_CMJN-01.jpg}}
         \end{minipage}
       \end{center}
     \end{figure}
   \end{center}
 
-  \vspace{1cm}
+  \vspace{0.5cm}
   \hrule
   \begin{flushleft}
     \Huge{\textit{Extraction automatisée de parallélisme de tâches, et expression dans le formalisme SYCL}}\\
@@ -39,11 +39,11 @@
     \begin{figure}[!htbp]
       \begin{center}
         \begin{minipage}{0.4\linewidth}
-          \center{\includegraphics[width=1\textwidth]{labri.jpeg}}
+          \center{\includegraphics[scale=0.3]{labri.jpeg}}
         \end{minipage}
         \hfill
         \begin{minipage}{0.4\linewidth}
-          \center{\includegraphics[width=1\textwidth]{INRIA_CORPO_CMJN.png}}
+          \center{\includegraphics[scale=0.3]{INRIA_CORPO_CMJN.png}}
         \end{minipage}
       \end{center}
     \end{figure}
