New biblio, ispell variables in files for emacs, context page

--- a/reportMaster2/art.bib
+++ b/reportMaster2/art.bib
@@ -1,34 +1,16 @@
-@misc{Ths1,
-   author = {Dastgeer, Usman},
-   institution = {Linköping University, PELAB - Programming Environment Laboratory},
-   pages = {90},
-   publisher = {Linköping University Electronic Press},
-   school = {Linköping UniversityLinköping University, PELAB - Programming Environment Laboratory, The Institute of Technology},
-   title = {Skeleton Programming for Heterogeneous GPU-based Systems},
-   series = {Linköping Studies in Science and Technology. Thesis},
-   number = {1504},
-   year = {2011}
-}
-
 @inproceedings{Art1,
-  author    = {Heybrock, Simon and
-               Jo{\'{o}}, B{\'{a}}lint and
-               Kalamkar, Dhiraj D. and
-               Smelyanskiy, Mikhail and
-               Vaidyanathan, Karthikeyan and
-               Wettig, Tilo and
-               Dubey, Pradeep},
-  title     = {Lattice {QCD} with Domain Decomposition on Intel{\textregistered}
+  author = {Heybrock, Simon and Jo{\'{o}}, B{\'{a}}lint and Kalamkar, Dhiraj D. and Smelyanskiy, Mikhail and Vaidyanathan, Karthikeyan and Wettig, Tilo and Dubey, Pradeep},
+  title = {Lattice {QCD} with Domain Decomposition on Intel{\textregistered}
                Xeon Phi Co-Processors},
   booktitle = {International Conference for High Performance Computing, Networking,
                Storage and Analysis, {SC} 2014, New Orleans, LA, USA, November 16-21,
                2014},
-  pages     = {69--80},
-  year      = {2014},
-  url       = {http://dx.doi.org/10.1109/SC.2014.11},
-  doi       = {10.1109/SC.2014.11},
+  pages = {69--80},
+  year = {2014},
+  url = {http://dx.doi.org/10.1109/SC.2014.11},
+  doi = {10.1109/SC.2014.11},
   timestamp = {Thu, 22 Jan 2015 19:03:31 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/sc/HeybrockJKSVWD14},
+  biburl = {http://dblp.uni-trier.de/rec/bib/conf/sc/HeybrockJKSVWD14},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
@@ -288,7 +270,7 @@ doi={10.1109/SC.2010.2}
  keywords = {compiler optimization, loop tiling and fusion, stencil computation}
 } 
 
-@MISC{Art18,
+@misc{Art18,
     author = {Tang, Yuan and Chowdhury, Rezaul and Luk, Chi-keung and Leiserson, Charles E.},
     title = {Coding Stencil Computations Using the Pochoir Stencil-Specification Language},
     year = {2011}
@@ -321,7 +303,7 @@ doi={10.1109/SC.2010.2}
 }
 
 @article{Art21,
-    author = {Todd, Veldhuizen},
+    author = {Veldhuizen, Todd L.},
     title = {Expression Templates},
     journal = {C++ Report},
     year = {1995},
@@ -345,23 +327,37 @@ doi={10.1109/SC.2010.2}
 	language={English}
 }
 
-@phdthesis{Ths2,
-	author={Amini, Mehdi},
-	title={Source-to-Source Automatic Program Transformations for GPU-like Hardware Accelerators},
-	school={Mines ParisTech},
-	year={2012}
+@inproceedings{Art23,
+	author={Watson, G.R. and Rasmussen, C.E. and Tibbitts, B.R.},
+	booktitle={Parallel Distributed Processing, 2009. IPDPS 2009. IEEE International Symposium on},
+	title={An integrated approach to improving the parallel application development process},
+	year={2009},
+	month={May},
+	pages={1-8},
+	keywords={application program interfaces;message passing;parallel programming;MPI code;clock scaling;feature-size reduction;message passing interface;multicore technologies;multiprocessor technologies;parallel application development process;parallel programming;parallel tools platform project;Application software;Concurrent computing;Debugging;Electronics packaging;Hardware;Parallel processing;Parallel programming;Performance analysis;Programming profession;System recovery},
+	doi={10.1109/IPDPS.2009.5160941},
+	ISSN={1530-2075}
 }
 
-@phdthesis{Ths3,
-	author={Thibault, Samuel},
-	title={Ordonnancement de processus légers sur architectures multiprocesseurs hiérarchiques : BubbleSched, une approche exploitant la structure du parallélisme des applications},
-	school={Université Bordeaux 1},
-	year={2007}
+@inproceedings{Art24,
+	author={Balasundaram, V. and Kennedy, K. and Kremer, U. and McKinley, K. and Subhlok, J.},
+	booktitle={Supercomputing, 1989. Supercomputing '89. Proceedings of the 1989 ACM/IEEE Conference on},
+	title={The parascope editor: an interactive parallel programming tool},
+	year={1989},
+	month={Nov},
+	pages={540-550},
+	keywords={Parallel programming},
+	doi={10.1145/76263.76323}
 }
 
-@phdthesis{Ths4,
-	author={Broquedis, François},
-	title={De l’exécution structurée d’applications scientifiques OpenMP sur architectures hiérarchiques},
-	school={Université Bordeaux 1},
-	year={2010}
+@inproceedings{Art25,
+	author={Larsen, P. and Ladelsky, R. and Lidman, J. and McKee, S.A. and Karlsson, S. and Zaks, A.},
+	booktitle={Parallel Processing (ICPP), 2012 41st International Conference on},
+	title={Parallelizing more Loops with Compiler Guided Refactoring},
+	year={2012},
+	month={Sept},
+	pages={410-419},
+	keywords={benchmark testing;edge detection;parallel programming;parallelising compilers;program control structures;software maintenance;software performance evaluation;application source code modification;automatic loop parallelization;benchmark performance;compiler guided refactoring;edge detection;eight-core Intel Xeon 5570 system;image processing;instruction-level parallelism;interactive compilation feedback system;loop-level parallelism;loop-parallel code generation;parallel application performance;quad-core IBM POWER6 system;scalable parallelized code;semiautomatic parallelization;sequential benchmarks;Arrays;Benchmark testing;Image edge detection;Kernel;Optimization;Production;Radiation detectors;Automatic Loop Parallelization;Compiler Feedback;Refactoring},
+	doi={10.1109/ICPP.2012.48},
+	ISSN={0190-3918}
 }
